# ai-factory

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
.scratch/: handoff-ai-code-factory-v1.md
.scratch/ai-code-factory-v1/: PRD.md
docs/: emacs-todo.md  emacs.md
docs/adr/: 0001-pluggable-agent-backend.md  0002-git-only-isolation-v1.md  0003-propose-never-land.md  0004-side-effecting-agent-backend.md  0005-factory-owned-deterministic-verification.md  0006-backends-manual-and-subprocess-presets.md  0007-safety-scope-and-deny-list.md  0008-config-layering-and-trust-split.md  0009-zero-runtime-dependencies.md  0010-prompt-architecture-and-authority.md  0011-run-and-phase-status-taxonomy.md  0012-runs-durable-explicit-cleanup.md  0013-v1-scope-boundary.md  0014-risk-aware-lifecycle.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
emacs/: .dir-locals.el  README.md  ai-factory.el
scripts/: afk-implement.sh
src/ai_factory/: __init__.py  cleanup.py  cli.py  config.py  decision_gate.py  git_ops.py  phase_runner.py  pr_body.py  profiling.py  prompt_builder.py  prompts.py  report.py  risk.py  run_artifacts.py  run_id.py  runner.py  (+5 more)
tests/: conftest.py  test_config_layering_trust_split.py  test_isolation_preconditions_cleanup.py  test_manual_mode_staged_commands.py  test_planning_phase.py  test_profiling.py  test_reporting_pr_body_review.py  test_resume_partial_change_safety.py  test_risk_aware_lifecycle.py  test_safety.py  test_subprocess_backend_hardening.py  test_verification_gate_fix_loop.py  test_verify.py  test_walking_skeleton.py
(+15 files in other folders)
