[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-factory"
version = "0.1.0"
description = "A local, repo-portable agentic engineering harness."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
ai-factory = "ai_factory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
